fix: :bug: fix preview table on firefox

--- a/udata_front/theme/gouvfr/assets/less/components/table.less
+++ b/udata_front/theme/gouvfr/assets/less/components/table.less
@@ -23,12 +23,12 @@
     --table-offset: 0;
 }
 
-.fr-table:has(thead th .fr-btn) {
+.fr-table--dense table {
     tbody td {
         .fr-py-2w;
         .fr-px-5v;
     }
-    th {
+    thead th {
         padding: 0.75rem 0.5rem;
         padding-bottom: 0.865rem;
     }
